<resources>
    <string name="app_name">FYP Business</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="user_id">userId</string>


    <string name="domain_name">http://54.254.189.150/</string>
    <string name="domain_name_key">domain_name_key</string>
    <string name="subdomain_name">FypWebApiBusiness/</string>
    <string name="subdomain_name_key">subdomain_name_key</string>
    <string name="authentication_token_key">authentication_token_key</string>
    <string name="shared_preference_key">shared_preference_key</string>
    <string name="login_url">api/account/login</string>
    <string name="sign_up_url">api/account/register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="get_game_type_url">api/gameTypes</string>
    <string name="get_game_list_by_type_id">/api/games/gameType/</string>
    <string name="get_game_period_by_game_id">api/games/period/</string>
    <string name="get_cost_model_by_firm_id">api/games/costing/</string>
    <string name="get_balance_sheet_by_firm_id">api/games/balanceSheet/</string>
    <string name="get_firm_info_by_firm_id">api/games/firms/</string>
    <string name="adjust_production_selling_price">api/games/firms/productionChange/</string>
    <string name="add_costing_details">api/games/costing/</string>


    <!-- Strings related to intent -->
    <string name="firm_id">firmId</string>
    <string name="period_id">periodId</string>
    <string name="game_id">gameId</string>
    <string name="game_information_list_model">gameInformationListModel</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_header_server_settings">Server Settings</string>
    <string name="pref_title_domain_name">Domain Address</string>
    <string name="pref_title_domain_route">Domain Route</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_balance_sheet">BalanceSheetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="print">Print</string>
    <string name="title_activity_income_statement">IncomeStatementActivity</string>

</resources>
