<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/domain_name"
        android:inputType="textCapWords"
        android:key="@string/domain_name_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_domain_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/subdomain_name"
        android:inputType="textCapWords"
        android:key="@string/subdomain_name_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_domain_route"></EditTextPreference>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
